SERVER-118528 fix undeterministic timing behaviour of failpoint (#47548)

GitOrigin-RevId: 0d1f7ab717501ba69140749733fa7926006bd775